2006-09-16  Edward Hervey  <edward@fluendo.com>

	* tests/check/common.h:
	Added convenience function to create a int/float audiotest gnlsource.
	* tests/check/complex.c: (GST_START_TEST), (gnonlin_suite):
	Added test_renegotiation to test re-negotiation error seen in #352827

2006-09-16  Edward Hervey  <edward@fluendo.com>

	* tests/check/.cvsignore:
	add gnloperation

2006-09-16  Edward Hervey  <edward@fluendo.com>

	* tests/check/Makefile.am:
	add common.h

2006-09-16  Edward Hervey  <edward@fluendo.com>

	* tests/check/Makefile.am:
	* tests/check/common.h:
	Single header file that contains all the common functions and structures
	for the gnonlin tests.
	* tests/check/complex.c:
	* tests/check/gnlsource.c: (GST_START_TEST):
	* tests/check/simple.c:
	Switch to using common.h , makes test files smaller.
	* tests/check/gnloperation.c: (GST_START_TEST), (gnonlin_suite),
	(main):
	Created new test for gnloperations, starting with one that tests adding
	and removing operations, and checking that the outputted segments are
	correct.

2006-09-07  Edward Hervey  <edward@fluendo.com>

	* gnl/gnlfilesource.c: (gnl_filesource_class_init):
	Add pad templates to GnlFileSource so we can use it properly
	with gst-launch.

2006-08-31  Edward Hervey  <edward@fluendo.com>

	* gnl/gnlcomposition.c: (gnl_composition_add_object):
	Set all properties of default sources in one g_object_set().

2006-08-30  Edward Hervey  <edward@fluendo.com>

	* gnl/gnlcomposition.c:
	(compare_deactivate_single_node):
	When unlinking source/operations , flush the parent's sink pad, so any
	stream locks are released.
	* gnl/gnloperation.c:
	(element_is_valid_filter): Scan pads AND templates to figure out if the
	element is a valid filter, and properly establish if it has dynamic
	pads,
	(get_unused_static_sink_pad):
	comments,
	(get_request_sink_pad):
	New function for getting request sink pads.
	(add_sink_pad):
	Add support for request sink pads,
	(synchronize_sinks):
	Don't try to add pads if it fails.